--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% load static %}
+{% load bootstrap_pagination %}
+{% load humanize %}
+{% load crispy_forms_tags %}
 
 {% block menu-title %}List Subscriptions Plan{% endblock %}
 {% block listsubscriptionplan-active %}active{% endblock %}
@@ -15,42 +19,81 @@
               aria-hidden="true">&times;</span></button>
         </div>
         {% endfor %}
-        <h6>Subscription Plans</h6>
+        <div class="align-middle">
+          <h6>Susbcriptions Plan</h6>
+        </div>
+        <a href="{% url 'subscriptions:add_subscription_plan' %}" class="btn bg-gradient-info ms-3 w-20 mt-2">Add
+          Subscription Plans</a>
+        <div class="col-lg-6">
+          {% crispy subscription_plan_filter.form %}
+          <form method="get" class="form-group">
+            <button class="btn bg-gradient-info mt-2 mb-0" type="submit">Filter</button>
+            <button class="btn bg-gradient-info mt-2 mb-0">
+              <a href="{% url 'subscriptions:list_subscription_plan' %}">
+                Clear Filter
+              </a>
+            </button>
+          </form>
+        </div>
       </div>
       <div class="card-body px-0 pt-0 pb-2">
         <div class="table-responsive p-0">
-          <table class="table align-items-center mb-0">
+          <table class="table sortable align-items-center mb-0">
             <thead>
               <tr>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder">Name</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder ps-2">Duration</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder ps-2">Price</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder ps-2">Status</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder">Name</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder">Duration</th>
+                <th class="text-uppercase text-end text-xs text-dark font-weight-bolder">Price</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder">Trial Unit</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder">Recurrence Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder">Recurrence Unit</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder">Status</th>
               </tr>
             </thead>
             <tbody>
               {% for data in object_list %}
               <tr>
-                <td class="text-sm px-4">
+                <td class="px-4">
                   <p class="text-xs font-weight-bold mb-0">{{ data.name }}</p>
                 </td>
-                <td class="align-middle text-sm">
-                  <p class="text-xs font-weight-bold mb-0">{{ data.duration }} Month</p>
+                <td>
+                  <p class="text-xs font-weight-bold mb-0 ps-3">{{ data.trial_period }} Month</p>
                 </td>
-                <td class="align-middle text-sm">
-                  <p class="text-xs font-weight-bold mb-0">Rp {{ data.price }}</p>
+                <td>
+                  <p class="text-xs text-end font-weight-bold mb-0">Rp {{ data.price|intcomma }}</p>
                 </td>
-                <td class="align-middle text-sm">
+                <td>
+                  <p class="text-xs font-weight-bold mb-0 ps-3">{{ data.trial_unit }}</p>
+                </td>
+                <td>
+                  <p class="text-xs font-weight-bold mb-0 ps-3 text-end">{{ data.recurrence_period }}</p>
+                </td>
+                <td>
+                  <p class="text-xs font-weight-bold mb-0 ps-3">{{ data.recurrence_unit }}</p>
+                </td>
+                <td>
                   {% if data.is_active %}
-                  <p class="text-xs font-weight-bold mb-0">Active</p>
+                  <p class="text-xs font-weight-bold mb-0 ps-3">Active</p>
                   {% else %}
-                  <p class="text-xs font-weight-bold mb-0">Not Active</p>
+                  <p class="text-xs font-weight-bold mb-0 ps-3">Not Active</p>
                   {% endif %}
                 </td>
               </tr>
               {% endfor %}
             </tbody>
           </table>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="row">
+          <hr>
+          <div class="col-md-6">
+            <span>{% bootstrap_paginate page_obj show_first_last="true" centered="true" range=1 %}</span>
+          </div>
+          <div class="col-md-6 text-end">
+            <span class="text-sm">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+          </div>
+          <hr>
         </div>
       </div>
     </div>
@@ -60,24 +103,24 @@
 
 {% block inline_javascript %}
 <script type="text/javascript">
-    $('.show_confirm').click(function (event) {
-        var form = $(this).closest("form");
-        var name = $(this).data("name");
-        event.preventDefault();
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
-        })
-            .then((willDelete) => {
-                if (willDelete.isConfirmed) {
-                    form.submit();
-                }
-            });
-    });
+  $('.show_confirm').click(function (event) {
+    var form = $(this).closest("form");
+    var name = $(this).data("name");
+    event.preventDefault();
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "You won't be able to revert this!",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, delete it!'
+    })
+      .then((willDelete) => {
+        if (willDelete.isConfirmed) {
+          form.submit();
+        }
+      });
+  });
 </script>
 {% endblock inline_javascript %}
