--- a/kawn_subscriptions_manager/templates/partials/sidebar.html
+++ b/kawn_subscriptions_manager/templates/partials/sidebar.html
@@ -12,10 +12,10 @@
         </a>
     </div>
     <hr class="horizontal dark mt-0">
-    <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
+    <div class="sidenav  w-auto " id="sidenav-collapse-main">
         <ul class="navbar-nav">
             <li class="nav-item mt-3">
-                <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Main Menu</h6>
+                <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Main</h6>
             </li>
             {% url 'home' as home %}
             <li class="nav-item">
@@ -27,9 +27,9 @@
                     <span class="nav-link-text ms-1">Dashboard</span>
                 </a>
             </li>
-            {% url 'clients:list_client' as list_client %}
             <li class="nav-item">
-                <a class="nav-link {% if request.get_full_path == list_client %}active{% endif %}" href="{% url 'clients:list_client'  %}">
+                <a class="nav-link {% if 'clients/l' in request.get_full_path %} active {% endif %}"
+                    href="{% url 'clients:list_client'  %}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-people-arrows"></i>
@@ -37,32 +37,21 @@
                     <span class="nav-link-text ms-1">Clients</span>
                 </a>
             </li>
-            {% url 'subscriptions:list_subscription_plan' as list_subscription_plan %}
             <li class="nav-item">
-                <a class="nav-link  {% if request.get_full_path == list_subscription_plan %}active{% endif %}"
-                    href="{% url 'subscriptions:list_subscription_plan'  %}">
+                <a class="nav-link {% if 'outlet/' in request.get_full_path %} active {% endif %}"
+                    href="{% url 'clients:list_outlet' %}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="fa-solid fa-diagram-next"></i>
+                        <i class="fa-solid fa-store"></i>
                     </div>
-                    <span class="nav-link-text ms-1">Subscription Plans</span>
-                </a>
-            </li>
-            {% url 'subscriptions:list_subscription' as list_subscription %}
-            <li class="nav-item">
-                <a class="nav-link  {% if request.get_full_path == list_subscription %}active{% endif %}"
-                    href="{% url 'subscriptions:list_subscription'  %}">
-                    <div
-                        class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="fa-solid fa-list"></i>
-                    </div>
-                    <span class="nav-link-text ms-1">Client Subscriptions</span>
+                    <span class="nav-link-text ms-1">Outlets</span>
                 </a>
             </li>
             {% if request.user.type == "ADMIN" %}
             {% url 'users:list_users' as list_users %}
             <li class="nav-item">
-                <a class="nav-link  {% if request.get_full_path == list_users %}active{% endif %}" href="{% url 'users:list_users'%}">
+                <a class="nav-link  {% if request.get_full_path == list_users %}active{% endif %}"
+                    href="{% url 'users:list_users'%}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-people-group"></i>
@@ -72,11 +61,32 @@
             </li>
             {% endif %}
             <li class="nav-item mt-3">
-                <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Settings Menu</h6>
+                <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Settings</h6>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link  {% if 'subscription_plan/' in request.get_full_path %} active {% endif %}"
+                    href="{% url 'subscriptions:list_subscription_plan'  %}">
+                    <div
+                        class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-diagram-next"></i>
+                    </div>
+                    <span class="nav-link-text ms-1">Subscription Plans</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link  {% if 'subscription/' in request.get_full_path %} active {% endif %}"
+                    href="{% url 'subscriptions:list_subscription'  %}">
+                    <div
+                        class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-list"></i>
+                    </div>
+                    <span class="nav-link-text ms-1">Subscriptions</span>
+                </a>
             </li>
             {% url 'users:profile_users' as profile_users %}
             <li class="nav-item">
-                <a class="nav-link  {% if request.get_full_path == profile_users %}active{% endif %}" href="{% url 'users:profile_users'  %}">
+                <a class="nav-link  {% if request.get_full_path == profile_users %}active{% endif %}"
+                    href="{% url 'users:profile_users'  %}">
                     <div
                         class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-user-gear"></i>
